name:                rts-serialisation
version:             0.0.0.0

synopsis:            Runtime-supported serialisation for Haskell 
description: Haskell heap structures can be serialised, capturing their
             current state of evaluation, into a special data structure
             which can be written to storage. The data structure can later
             be read back in and the original data deserialised, provided 
             that this is performed by the same executable binary.
             Serialisation and deserialisation can cause exceptions in
             the runtime system, and type mismatches at Haskell level.
             The package comes with test programs that demonstrate its features.

license:             BSD3
license-file:        LICENSE
author:              Jost Berthold
maintainer:          jb.diku@gmail.com
copyright:      (c) 2010-13 Jost Berthold

category:            System, GHC
build-type:          Configure
cabal-version:       >=1.8

library
  -- Modules exported by the library.
  exposed-modules:     GHC.Packing, Control.Monad.Checkpoint
  		        -- MemoizeExample, CheckpointExample, 
			-- typePropagates, lazyIO

  -- other-modules:       

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7.* && < 5, 
		       directory >=1.2.* && < 2,
  		       ghc-prim >=0.3.* && < 1, 
		       array >=0.4.* && < 0.5, 
		       binary >=0.7.* && < 1, 
		       bytestring >=0.10.* && < 1,
		       transformers >=0.3. && < 1

source-repository head
    type:     git
    location: git://github.com/jberthold/rts-serialisation
